<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, FlexwerkerTestActivity!</string>
    <string name="app_name">FlexwerkerTestApp</string>
    
    <string name="btn_test1">Test 1: Status (accelerationmeter)</string>
    <string name="btn_test2">Test 2: Coords (Qubulus)</string>

    <!-- Qubulus settings (required) -->
    <string name="qps_customer_id">kevinvaningen</string>
    <string name="qps_site_id">1806</string>
    <string name="qps_server">api-dev.loclizard.com:8080</string>
    <string name="qps_switch_floor_queue_size">3</string>
    <string name="qps_switch_floor_queue_time_tollerance">30</string>
    
    <string name="intervalString">Het aantal seconden beweging voordat de status eventueel wordt aangepast</string>
    <string name="intervalInputString">Timer in seconden</string>
    <string name="intervalSubmitString">Timer opslaan</string>
    <string name="secondTimerString">Het aantal seconden als de status op niet beschikbaar staat</string>
    <string name="thresholdString">De threshold waarboven de beweging wordt geregistreerd</string>
    <string name="thresholdInputString">Threshold tussen 0 en 15</string>
    <string name="thresholdSubmitString">Threshold opslaan</string>
    <string name="counterString">Het aantal geregistreerde bewegingen waarna de status wordt aangepast</string>
    <string name="counterInputString">Counter int</string>
    
    <string name="currentStatusString">Huidige status:</string>
    <string name="currentAccelString">Huidige acceleratie:</string>
    
    <string name="currentIntervalString">Huidige timer:</string>
    <string name="currentSecondTimerString">Tweede timer:</string>
    <string name="currentThresholdString">Huidige threshold:</string>
    <string name="currentCounterString">Ingestelde counter:</string>
    
    <string name="startWalkingString">Start lopen</string>
    <string name="stopWalkingString">Stop lopen</string>
    <string name="doSomethingString">Doe iets met de telefoon</string>
    
    <string name="submitInputString">Instellingen opslaan</string>
    
    <string name="requestPositionString">Positie ophalen</string>
    <string name="nextPositionString">Volgende positie</string>
    
</resources>